--- a/index.html
+++ b/index.html
@@ -1,129 +1,99 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة OMA - SuperAdmin</title>
-<style>
-body{font-family:'Cairo',sans-serif;background:#f5f9ff;margin:0;padding:20px}
-h2{text-align:center;color:#004aad;margin-bottom:20px}
-#status{white-space:pre-wrap;padding:15px;background:#fff;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.1);max-height:500px;overflow:auto;}
-button{padding:10px 15px;margin:10px auto;display:block;border:none;border-radius:8px;background:#004aad;color:#fff;font-weight:bold;cursor:pointer}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>نظام إدارة المعاهد - OMA</title>
+
+  <style>
+    :root {
+      --primary: #004aad;
+      --accent: #ffcc33;
+      --bg: #f5f9ff;
+      --text: #102027;
+    }
+
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    header img {
+      width: 100px;
+      height: 100px;
+      object-fit: contain;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 2.2em;
+      color: var(--primary);
+      margin-bottom: 10px;
+    }
+
+    p {
+      max-width: 500px;
+      font-size: 1.1em;
+      line-height: 1.8;
+      margin-bottom: 30px;
+    }
+
+    button {
+      background: var(--primary);
+      color: white;
+      border: none;
+      padding: 12px 30px;
+      font-size: 1.1em;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: var(--accent);
+      color: var(--text);
+    }
+
+    footer {
+      position: absolute;
+      bottom: 15px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
 
-<h2>⚡ تهيئة نظام OMA</h2>
-<button id="startBtn">بدء التهيئة الآمنة</button>
-<div id="status"></div>
+  <header>
+    <!-- يمكنك وضع شعار المعهد هنا -->
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png" alt="شعار المعهد">
+  </header>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc, deleteDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+  <main>
+    <h1>مرحبًا بكم في نظام إدارة المعاهد - OMA</h1>
+    <p>
+      يهدف هذا النظام إلى تسهيل إدارة المعهد من حيث الطلاب، الأساتذة، الحصص، الحضور، والمالية.
+      <br>
+      كل ذلك من خلال واجهة بسيطة وآمنة وسريعة.
+    </p>
 
-// Firebase Config
-const firebaseConfig = {
-  apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
-  authDomain: "oma0-33cc0.firebaseapp.com",
-  projectId: "oma0-33cc0",
-  storageBucket: "oma0-33cc0.firebasestorage.app",
-  messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
-};
+    <button onclick="window.location.href='login.html'">
+      تسجيل الدخول إلى النظام
+    </button>
+  </main>
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
+  <footer>
+    © 2025 نظام إدارة المعاهد - OMA
+  </footer>
 
-const statusEl = document.getElementById('status');
-const startBtn = document.getElementById('startBtn');
-
-function log(msg){ statusEl.textContent += msg + "\n"; statusEl.scrollTop = statusEl.scrollHeight; }
-
-async function ensureUserInFirestore(email, uid, type){
-  const usersRef = collection(db,"users");
-  const userDocRef = doc(usersRef, uid);
-  const snap = await getDoc(userDocRef);
-  if(!snap.exists()){
-    await setDoc(userDocRef, { uid, email, type, createdAt: serverTimestamp() });
-    log(`✅ تم إنشاء مستند المستخدم في Firestore: ${email}`);
-  } else log(`ℹ️ مستند المستخدم موجود مسبقًا: ${email}`);
-}
-
-async function clearPreviousData(){
-  log("🗑️ حذف جميع المعاهد والمستندات السابقة...");
-  const snap = await getDocs(collection(db,"institutes"));
-  for(const d of snap.docs) await deleteDoc(doc(db,"institutes",d.id));
-  const usersSnap = await getDocs(collection(db,"users"));
-  for(const d of usersSnap.docs){
-    if(d.data().type!=="superAdmin") await deleteDoc(doc(db,"users",d.id));
-  }
-  log("✅ تم حذف البيانات السابقة");
-}
-
-async function startSetup(){
-  startBtn.disabled = true;
-  statusEl.textContent = "✅ بدء التهيئة الآمنة...\n";
-
-  try{
-    await clearPreviousData();
-
-    // 1️⃣ إنشاء حساب superAdmin
-    const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
-    try{
-      const cred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
-      await ensureUserInFirestore(superAdmin.email, cred.user.uid, superAdmin.type);
-      log("✅ تم إنشاء حساب SuperAdmin");
-    }catch(err){
-      if(err.code === "auth/email-already-in-use"){
-        log("⚠️ حساب SuperAdmin موجود مسبقًا، سيتم إنشاء مستند Firestore إذا لم يكن موجودًا");
-        // تسجيل الدخول للحصول على UID
-        const cred = await signInWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
-        await ensureUserInFirestore(superAdmin.email, cred.user.uid, superAdmin.type);
-      } else throw err;
-    }
-
-    // 2️⃣ إنشاء معهدين تجريبيين
-    const institutes = [
-      { name:"معهد بغداد", email:"admin1@mail.com", password:"Admin1234" },
-      { name:"معهد البصرة", email:"admin2@mail.com", password:"Admin1234" }
-    ];
-
-    for(const inst of institutes){
-      try{
-        const cred = await createUserWithEmailAndPassword(auth, inst.email, inst.password);
-        const adminId = cred.user.uid;
-        // إضافة المستند في users
-        await ensureUserInFirestore(inst.email, adminId, "instituteAdmin");
-        // إضافة المعهد
-        const docRef = doc(collection(db,"institutes"));
-        await setDoc(docRef, {
-          name: inst.name,
-          adminId,
-          adminEmail: inst.email,
-          colors:{ primary:"#004aad", bg:"#f5f9ff", card:"#fff", accent:"#ffcc33" },
-          subscriptionType:"trial",
-          createdAt: serverTimestamp()
-        });
-        log(`✅ تم إنشاء المعهد: ${inst.name} (${inst.email})`);
-      }catch(err){
-        if(err.code==="auth/email-already-in-use"){
-          log(`⚠️ المستخدم ${inst.email} موجود مسبقًا، سيتم التأكد من مستند Firestore`);
-          // تسجيل الدخول للحصول على UID
-          const cred = await signInWithEmailAndPassword(auth, inst.email, inst.password);
-          await ensureUserInFirestore(inst.email, cred.user.uid, "instituteAdmin");
-        } else throw err;
-      }
-    }
-
-    log("🎉 تم الانتهاء من التهيئة بنجاح!");
-  }catch(err){
-    log("❌ حدث خطأ أثناء التهيئة: " + err.message);
-  }
-}
-
-startBtn.addEventListener("click", startSetup);
-</script>
 </body>
 </html>
