--- a/init.html
+++ b/init.html
@@ -3,137 +3,201 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة النظام - OMA</title>
+<title>تهيئة نظام OMA - SuperAdmin</title>
 <style>
-body {
-  font-family: 'Cairo', sans-serif;
-  background: #f5f9ff;
-  text-align: center;
-  padding: 40px;
-  color: #004aad;
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+  --bg:#f5f9ff;
+  --card:#fff;
 }
-button {
-  padding: 12px 25px;
-  font-size: 16px;
-  border: none;
-  border-radius: 8px;
-  background: #004aad;
-  color: white;
-  cursor: pointer;
+body{
+  font-family:'Cairo',sans-serif;
+  background:var(--bg);
+  margin:0;
+  padding:0;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  height:100vh;
+  text-align:center;
+  color:#102027;
 }
-button:hover { background: #003a8c; }
-#log {
-  margin-top: 20px;
-  white-space: pre-wrap;
-  text-align: right;
-  background: #fff;
-  border-radius: 10px;
-  padding: 20px;
-  max-width: 600px;
-  margin: auto;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.container{
+  background:var(--card);
+  padding:25px;
+  border-radius:15px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.15);
+  width:90%;
+  max-width:500px;
 }
+h2{color:var(--primary);}
+input{
+  width:80%;
+  padding:10px;
+  border:1px solid #ccc;
+  border-radius:8px;
+  margin:10px 0;
+  text-align:center;
+  font-size:1em;
+}
+button{
+  background:var(--primary);
+  color:#fff;
+  border:none;
+  border-radius:8px;
+  padding:10px 20px;
+  font-size:1.1em;
+  cursor:pointer;
+  transition:0.3s;
+}
+button:hover{background:var(--accent);color:#102027;}
+#status{
+  white-space:pre-wrap;
+  text-align:left;
+  background:#f9f9f9;
+  border-radius:10px;
+  padding:15px;
+  margin-top:20px;
+  max-height:300px;
+  overflow:auto;
+  font-size:0.9em;
+  box-shadow:inset 0 0 5px rgba(0,0,0,0.1);
+}
+.hidden{display:none;}
 </style>
 </head>
 <body>
-<h2>🔧 تهيئة نظام OMA</h2>
-<p>اضغط الزر أدناه لإنشاء المستخدم والمعهد التجريبي.</p>
-<button id="initBtn">بدء التهيئة</button>
-<div id="log"></div>
+
+<div class="container">
+  <h2>⚙️ تهيئة نظام OMA</h2>
+  <p>هذه العملية مخصصة فقط للمسؤول العام (SuperAdmin)</p>
+  <input type="password" id="adminKey" placeholder="أدخل كلمة المرور الإدارية">
+  <button id="startBtn">بدء التهيئة</button>
+  <div id="status" class="hidden"></div>
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// ✅ إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
   projectId: "oma0-33cc0",
   storageBucket: "oma0-33cc0.firebasestorage.app",
   messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
-  measurementId: "G-5CKWYQT9XZ"
+  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const log = document.getElementById("log");
-const btn = document.getElementById("initBtn");
-function write(msg){ log.innerHTML += `✅ ${msg}\n`; }
+const startBtn = document.getElementById('startBtn');
+const adminKey = document.getElementById('adminKey');
+const statusEl = document.getElementById('status');
 
-btn.addEventListener("click", async()=>{
-  btn.disabled = true;
-  write("جاري التهيئة...");
+function log(msg){
+  statusEl.classList.remove('hidden');
+  statusEl.textContent += msg + "\n";
+  statusEl.scrollTop = statusEl.scrollHeight;
+}
 
-  try {
-    // إنشاء superAdmin
-    const email = "Salahalkaleefa@gmail.com";
-    const password = "123456salah";
-    const userCred = await createUserWithEmailAndPassword(auth, email, password);
-    const uid = userCred.user.uid;
-
-    await setDoc(doc(db,"users",uid),{
-      name:"مسؤول النظام",
-      email,
-      type:"superAdmin",
-      createdAt:serverTimestamp()
-    });
-    write("تم إنشاء مستخدم superAdmin بنجاح.");
-
-    // إنشاء معهد تجريبي
-    const instituteId = "demo-institute";
-    await setDoc(doc(db,"institutes",instituteId),{
-      name:"معهد OMA التجريبي",
-      adminEmail:"demo@oma.edu",
-      logo:"https://i.ibb.co/vqC4ZP6/institute-logo.png",
-      colors:{
-        primary:"#004aad",
-        accent:"#ffcc33",
-        background:"#f5f9ff",
-        card:"#ffffff"
-      },
-      subscriptionType:"trial",
-      createdAt:serverTimestamp(),
-      createdBy:uid
-    });
-    write("تم إنشاء المعهد التجريبي بنجاح.");
-
-    // إنشاء مدير المعهد التجريبي
-    const managerEmail = "demo@oma.edu";
-    const managerPassword = "123456demo";
-    const managerCred = await createUserWithEmailAndPassword(auth, managerEmail, managerPassword);
-    const managerUid = managerCred.user.uid;
-
-    await setDoc(doc(db,"users",managerUid),{
-      name:"مدير معهد OMA التجريبي",
-      email:managerEmail,
-      type:"instituteAdmin",
-      instituteId:instituteId,
-      createdAt:serverTimestamp()
-    });
-    write("تم إنشاء مدير المعهد التجريبي بنجاح.");
-
-    // إعدادات أساسية للمعهد
-    await setDoc(doc(db,`institutes/${instituteId}/settings/general`),{
-      openHours:"8:00 AM - 5:00 PM",
-      contact:"07800000000",
-      address:"بغداد - العراق",
-      updatedAt:serverTimestamp()
-    });
-
-    write("تم إعداد الإعدادات العامة للمعهد.");
-    write("🎉 تم التهيئة بنجاح! يمكنك تسجيل الدخول الآن:\n");
-    write("🔹 مسؤول النظام:\n   البريد: Salahalkaleefa@gmail.com\n   كلمة المرور: 123456salah\n");
-    write("🔹 مدير المعهد:\n   البريد: demo@oma.edu\n   كلمة المرور: 123456demo\n");
-    write("\nانتقل إلى صفحة login.html لتسجيل الدخول.");
-  } catch (err) {
-    console.error(err);
-    write("❌ حدث خطأ أثناء التهيئة: " + err.message);
+async function ensureUser(email, uid, type){
+  const ref = doc(db,"users",uid);
+  const snap = await getDoc(ref);
+  if(!snap.exists()){
+    await setDoc(ref,{uid,email,type,createdAt:serverTimestamp()});
+    log(`✅ إضافة مستند المستخدم: ${email}`);
+  }else{
+    log(`ℹ️ المستخدم موجود مسبقًا: ${email}`);
   }
-});
+}
+
+async function clearOldData(){
+  log("🗑️ حذف المعاهد والمستخدمين القدامى...");
+  const instSnap = await getDocs(collection(db,"institutes"));
+  for(const d of instSnap.docs) await deleteDoc(doc(db,"institutes",d.id));
+  const userSnap = await getDocs(collection(db,"users"));
+  for(const d of userSnap.docs){
+    if(d.data().type!=="superAdmin") await deleteDoc(doc(db,"users",d.id));
+  }
+  log("✅ تم الحذف بنجاح.\n");
+}
+
+async function startSetup(){
+  const pass = adminKey.value.trim();
+  if(pass !== "AdminSetup2025"){ // 🔐 كلمة المرور الإدارية
+    alert("كلمة المرور غير صحيحة ❌");
+    return;
+  }
+
+  if(!confirm("⚠️ هل أنت متأكد من تشغيل التهيئة؟ سيتم حذف جميع البيانات القديمة!")){
+    return;
+  }
+
+  startBtn.disabled = true;
+  log("🚀 بدء التهيئة الآمنة...\n");
+
+  try{
+    await clearOldData();
+
+    // إنشاء superAdmin
+    const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
+    try{
+      const cred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
+      await ensureUser(superAdmin.email, cred.user.uid, superAdmin.type);
+      log("✅ تم إنشاء حساب SuperAdmin");
+    }catch(err){
+      if(err.code==="auth/email-already-in-use"){
+        log("⚠️ حساب SuperAdmin موجود مسبقًا، تسجيل الدخول...");
+        const cred = await signInWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
+        await ensureUser(superAdmin.email, cred.user.uid, superAdmin.type);
+      }else throw err;
+    }
+
+    // إنشاء معاهد تجريبية
+    const institutes = [
+      { name:"معهد بغداد", email:"admin1@mail.com", password:"Admin1234" },
+      { name:"معهد البصرة", email:"admin2@mail.com", password:"Admin1234" }
+    ];
+
+    for(const inst of institutes){
+      try{
+        const cred = await createUserWithEmailAndPassword(auth, inst.email, inst.password);
+        const uid = cred.user.uid;
+        await ensureUser(inst.email, uid, "instituteAdmin");
+        const instRef = doc(collection(db,"institutes"));
+        await setDoc(instRef,{
+          name:inst.name,
+          adminId:uid,
+          adminEmail:inst.email,
+          colors:{primary:"#004aad",bg:"#f5f9ff",accent:"#ffcc33",card:"#fff"},
+          subscriptionType:"trial",
+          createdAt:serverTimestamp()
+        });
+        log(`✅ تم إنشاء المعهد: ${inst.name}`);
+      }catch(err){
+        if(err.code==="auth/email-already-in-use"){
+          log(`⚠️ ${inst.email} موجود مسبقًا`);
+          const cred = await signInWithEmailAndPassword(auth, inst.email, inst.password);
+          await ensureUser(inst.email, cred.user.uid, "instituteAdmin");
+        }else throw err;
+      }
+      await new Promise(res=>setTimeout(res,1000)); // تأخير بسيط
+    }
+
+    log("\n🎉 تم الانتهاء من التهيئة بنجاح!");
+  }catch(err){
+    log("❌ خطأ: "+err.message);
+  }
+}
+startBtn.addEventListener("click",startSetup);
 </script>
+
 </body>
 </html>
