--- a/init.html
+++ b/init.html
@@ -83,14 +83,14 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebas
 import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// إعداد Firebase
+// ✅ Firebase Config الصحيح لمشروعك
 const firebaseConfig = {
-  apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
-  authDomain: "oma0-33cc0.firebaseapp.com",
-  projectId: "oma0-33cc0",
-  storageBucket: "oma0-33cc0.firebasestorage.app",
-  messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
+  apiKey: "AIzaSyBNlc3Dp7C9ZUsFAPHAe2i7t1V343fnAy0",
+  authDomain: "oma-system-free.firebaseapp.com",
+  projectId: "oma-system-free",
+  storageBucket: "oma-system-free.firebasestorage.app",
+  messagingSenderId: "700360966818",
+  appId: "1:700360966818:web:522e5f1dfef2d3cc860dfb"
 };
 
 const app = initializeApp(firebaseConfig);
@@ -146,7 +146,7 @@ async function startSetup(){
   try{
     await clearOldData();
 
-    // إنشاء superAdmin
+    // إنشاء SuperAdmin
     const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
     try{
       const cred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
@@ -196,7 +196,6 @@ async function startSetup(){
     log("❌ خطأ: "+err.message);
   }
 }
-
 startBtn.addEventListener("click",startSetup);
 </script>
 
