--- a/init.html
+++ b/init.html
@@ -81,14 +81,14 @@ button:hover{background:var(--accent);color:#102027;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// ✅ Firebase Config الصحيح لمشروعك
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyBNlc3Dp7C9ZUsFAPHAe2i7t1V343fnAy0",
   authDomain: "oma-system-free.firebaseapp.com",
   projectId: "oma-system-free",
-  storageBucket: "oma-system-free.firebasestorage.app",
+  storageBucket: "oma-system-free.appspot.com",
   messagingSenderId: "700360966818",
   appId: "1:700360966818:web:522e5f1dfef2d3cc860dfb"
 };
@@ -107,36 +107,22 @@ function log(msg){
   statusEl.scrollTop = statusEl.scrollHeight;
 }
 
+// التأكد من وجود المستخدم أو إضافته
 async function ensureUser(email, uid, type){
   const ref = doc(db,"users",uid);
   const snap = await getDoc(ref);
   if(!snap.exists()){
     await setDoc(ref,{uid,email,type,createdAt:serverTimestamp()});
-    log(`✅ إضافة مستند المستخدم: ${email}`);
+    log(`✅ إضافة مستخدم جديد: ${email}`);
   }else{
     log(`ℹ️ المستخدم موجود مسبقًا: ${email}`);
   }
 }
 
-async function clearOldData(){
-  log("🗑️ حذف المعاهد والمستخدمين القدامى...");
-  const instSnap = await getDocs(collection(db,"institutes"));
-  for(const d of instSnap.docs) await deleteDoc(doc(db,"institutes",d.id));
-  const userSnap = await getDocs(collection(db,"users"));
-  for(const d of userSnap.docs){
-    if(d.data().type!=="superAdmin") await deleteDoc(doc(db,"users",d.id));
-  }
-  log("✅ تم الحذف بنجاح.\n");
-}
-
 async function startSetup(){
   const pass = adminKey.value.trim();
-  if(pass !== "AdminSetup2025"){
+  if(pass !== "AdminSetup2025"){ 
     alert("كلمة المرور غير صحيحة ❌");
-    return;
-  }
-
-  if(!confirm("⚠️ هل أنت متأكد من تشغيل التهيئة؟ سيتم حذف جميع البيانات القديمة!")){
     return;
   }
 
@@ -144,9 +130,7 @@ async function startSetup(){
   log("🚀 بدء التهيئة الآمنة...\n");
 
   try{
-    await clearOldData();
-
-    // إنشاء SuperAdmin
+    // إنشاء superAdmin إذا لم يكن موجودًا
     const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
     try{
       const cred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
@@ -160,7 +144,7 @@ async function startSetup(){
       }else throw err;
     }
 
-    // إنشاء معاهد تجريبية
+    // إنشاء معاهد تجريبية بدون حذف أي شيء
     const institutes = [
       { name:"معهد بغداد", email:"admin1@mail.com", password:"Admin1234" },
       { name:"معهد البصرة", email:"admin2@mail.com", password:"Admin1234" }
@@ -184,8 +168,6 @@ async function startSetup(){
       }catch(err){
         if(err.code==="auth/email-already-in-use"){
           log(`⚠️ ${inst.email} موجود مسبقًا`);
-          const cred = await signInWithEmailAndPassword(auth, inst.email, inst.password);
-          await ensureUser(inst.email, cred.user.uid, "instituteAdmin");
         }else throw err;
       }
       await new Promise(res=>setTimeout(res,1000));
@@ -196,6 +178,7 @@ async function startSetup(){
     log("❌ خطأ: "+err.message);
   }
 }
+
 startBtn.addEventListener("click",startSetup);
 </script>
 
