--- a/login.html
+++ b/login.html
@@ -1,144 +1,112 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تسجيل الدخول - نظام OMA</title>
 <style>
-:root{--primary:#004aad;--bg:#f5f9ff;--card:#fff}
-body{font-family:'Cairo',sans-serif;background:var(--bg);height:100vh;display:flex;align-items:center;justify-content:center;margin:0}
-.login-box{background:var(--card);padding:28px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.08);width:340px}
-h2{color:var(--primary);margin:0 0 14px;text-align:center}
-input,button{width:100%;padding:10px;border-radius:8px;border:1px solid #d6dde9;margin-bottom:10px;box-sizing:border-box}
-button{background:var(--primary);color:#fff;border:none;cursor:pointer;font-weight:700}
-.error{color:#c62828;font-size:14px;text-align:center;min-height:20px}
-.note{font-size:13px;color:#546e7a;text-align:center;margin-top:8px}
+    body {
+        font-family: 'Cairo', sans-serif;
+        background: #f3f7ff;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    .login-box {
+        background: white;
+        padding: 30px;
+        width: 350px;
+        border-radius: 12px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        text-align: center;
+        position: relative;
+    }
+    h2 { margin-bottom: 20px; color: #004aad; }
+    .password-field { position: relative; }
+    input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; font-size: 16px; }
+    .eye-btn { position: absolute; top: 50%; right: 12px; transform: translateY(-50%); cursor: pointer; font-size: 18px; color: #555; }
+    button { width: 100%; padding: 12px; background: #004aad; color: white; border: none; font-size: 16px; border-radius: 8px; cursor: pointer; margin-top: 10px; }
+    button:hover { opacity: .9; }
+    .error { color: red; margin-top: 10px; }
+    .loader { display: none; border: 4px solid #eee; border-top: 4px solid #004aad; border-radius: 50%; width: 35px; height: 35px; animation: spin 1s linear infinite; margin: 15px auto 0; }
+    @keyframes spin { to { transform: rotate(360deg); } }
 </style>
 </head>
 <body>
-  <div class="login-box">
+
+<div class="login-box">
     <h2>تسجيل الدخول</h2>
-    <div id="errorMsg" class="error"></div>
-    <input id="email" type="email" placeholder="البريد الإلكتروني" />
-    <input id="password" type="password" placeholder="كلمة المرور" />
-    <button id="loginBtn">دخول</button>
-    <div class="note">إذا لم يكن لديك حساب، اطّلب من مدير النظام إنشاء حسابك.</div>
-  </div>
+    <input type="email" id="email" placeholder="البريد الإلكتروني">
+    <div class="password-field">
+        <input type="password" id="password" placeholder="كلمة المرور">
+        <span class="eye-btn" onclick="togglePassword()">👁</span>
+    </div>
+    <button id="loginBtn">تسجيل الدخول</button>
+    <div class="loader" id="loader"></div>
+    <div id="error" class="error"></div>
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, doc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// ✳️ عدّل config إذا كان مختلف عندك
+// ✅ إعداد Firebase
 const firebaseConfig = {
-  apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
-  authDomain: "oma0-33cc0.firebaseapp.com",
-  projectId: "oma0-33cc0",
-  storageBucket: "oma0-33cc0.firebasestorage.app",
-  messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
-  measurementId: "G-5CKWYQT9XZ"
+  apiKey: "AIzaSyBNlc3Dp7C9ZUsFAPHAe2i7t1V343fnAy0",
+  authDomain: "oma-system-free.firebaseapp.com",
+  projectId: "oma-system-free",
+  storageBucket: "oma-system-free.appspot.com",
+  messagingSenderId: "700360966818",
+  appId: "1:700360966818:web:522e5f1dfef2d3cc860dfb"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const emailInput = document.getElementById('email');
-const passInput = document.getElementById('password');
-const loginBtn = document.getElementById('loginBtn');
-const errorMsg = document.getElementById('errorMsg');
+const loginBtn = document.getElementById("loginBtn");
+const loader = document.getElementById("loader");
+const errorBox = document.getElementById("error");
 
-function showError(text){
-  errorMsg.textContent = text || '';
+function togglePassword() {
+    const passField = document.getElementById("password");
+    passField.type = passField.type === "password" ? "text" : "password";
 }
 
-// تحويل المستخدم حسب النوع
-function redirectUserByType(type){
-  if(type === 'superAdmin') location.href = 'manage-institutes.html';
-  else if(type === 'instituteAdmin') location.href = 'dashboard.html';
-  else if(type === 'teacher') location.href = 'teacher-dashboard.html';
-  else if(type === 'student') location.href = 'student-dashboard.html';
-  else {
-    alert('نوع المستخدم غير معروف. راجع سجل المستخدم في Firestore (حقل type).');
-    console.warn('Unknown user type:', type);
-  }
-}
+loginBtn.addEventListener("click", async () => {
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+    errorBox.textContent = "";
+    loader.style.display = "block";
+    loginBtn.disabled = true;
 
-// robust lookup: after auth, check users doc by uid; if not found try query by email
-async function findUserDoc(uid, email){
-  try{
-    if(uid){
-      const snap = await getDoc(doc(db,'users',uid));
-      if(snap.exists()) return { id:snap.id, data: snap.data() };
+    try {
+        const cred = await signInWithEmailAndPassword(auth, email, password);
+        const uid = cred.user.uid;
+        const userDoc = await getDoc(doc(db, "users", uid));
+
+        if (!userDoc.exists()) throw new Error("المستخدم غير مرتبط بأي معهد");
+
+        const type = userDoc.data().type;
+
+        if (type === "superAdmin") {
+            window.location.href = "superadmin-dashboard.html";
+        } else if (type === "instituteAdmin") {
+            window.location.href = "dashboard.html";
+        } else {
+            throw new Error("نوع المستخدم غير معروف");
+        }
+    } catch (err) {
+        errorBox.textContent = "خطأ: " + err.message;
+    } finally {
+        loader.style.display = "none";
+        loginBtn.disabled = false;
     }
-  }catch(e){ console.warn('find by uid failed', e); }
-
-  // try by email field (some flows created docs without uid as id)
-  try{
-    const q = query(collection(db,'users'), where('email','==', email));
-    const qSnap = await getDocs(q);
-    if(!qSnap.empty){
-      const d = qSnap.docs[0];
-      return { id: d.id, data: d.data() };
-    }
-  }catch(e){ console.warn('find by email failed', e); }
-
-  return null;
-}
-
-loginBtn.addEventListener('click', async ()=>{
-  showError('');
-  loginBtn.disabled = true;
-  loginBtn.textContent = 'جاري التحقق...';
-
-  const email = emailInput.value.trim();
-  const password = passInput.value;
-
-  if(!email || !password){
-    showError('الرجاء إدخال البريد وكلمة المرور.');
-    loginBtn.disabled = false;
-    loginBtn.textContent = 'دخول';
-    return;
-  }
-
-  try{
-    const userCred = await signInWithEmailAndPassword(auth, email, password);
-    const uid = userCred.user.uid;
-    // حاول جلب وثيقة المستخدم من عدة طرق
-    const userDoc = await findUserDoc(uid, email);
-    if(!userDoc){
-      // المستخدم مسجل في Auth لكن لا يوجد سجل في users collection
-      showError('تم الدخول لكن بيانات المستخدم غير موجودة في قاعدة البيانات (users). تواصل مع الدعم.');
-      console.error('Auth user exists but no users doc for uid/email:', uid, email);
-      loginBtn.disabled = false;
-      loginBtn.textContent = 'دخول';
-      return;
-    }
-    const userData = userDoc.data;
-    if(!userData.type){
-      showError('نوع المستخدم غير محدد في وثيقة المستخدم (حقل type). راجع Firestore.');
-      console.error('User doc missing type:', userDoc);
-      loginBtn.disabled = false;
-      loginBtn.textContent = 'دخول';
-      return;
-    }
-
-    // نجاح: التوجيه حسب النوع
-    redirectUserByType(userData.type);
-
-  }catch(err){
-    console.error('Login error:', err);
-    // عرض رسائل خطأ مفصّلة للمستخدم
-    if(err.code === 'auth/user-not-found') showError('المستخدم غير موجود. تأكد من البريد.');
-    else if(err.code === 'auth/wrong-password') showError('كلمة المرور غير صحيحة.');
-    else if(err.code === 'auth/too-many-requests') showError('محاولات متعددة وفشل — حاول لاحقًا.');
-    else showError('حدث خطأ أثناء تسجيل الدخول: ' + (err.message || err.code));
-    loginBtn.disabled = false;
-    loginBtn.textContent = 'دخول';
-  }
 });
 </script>
+
 </body>
 </html>
